--- a/src/client/courses/instructor/edit-course/edit-course.component.jade
+++ b/src/client/courses/instructor/edit-course/edit-course.component.jade
@@ -25,6 +25,11 @@ div.container(*ngIf="this.course")
         (emitDifficulty)="setDifficulty($event)"
       )
     div.col.s3
+      edit-time-to-complete(
+        [course]="course"
+        (onTimeChange)="setTimeToComplete($event)"
+      )
+    div.col.s3
       div.input-field
         input(
           name="course-photo"
