show time to complete for student course

--- a/src/client/courses/student/take-course/begin-course.component.jade
+++ b/src/client/courses/student/take-course/begin-course.component.jade
@@ -13,6 +13,7 @@ div.container(*ngIf="studentCourse")
                 br
                 p Difficulty: {{ studentCourse.difficulty }}
                 br
+                p Time To Complete: {{ studentCourse.timeToComplete }} hours
               div.col.s4.push-s4
                 h6.header Taught by
                 p(*ngFor="let instructor of instructors") {{ instructor.fullName() }}
