--- a/src/client/courses/student/view-course/preview-course.component.jade
+++ b/src/client/courses/student/view-course/preview-course.component.jade
@@ -20,6 +20,9 @@ div.container
         h6 Difficulty
         p {{ course.difficulty }}
       
+      div.section
+        h6 Time To Complete
+        p {{ course.timeToComplete }} hours
       //- Course description
       div.section
         h6 Course description
