--- a/src/client/app/app.component.jade
+++ b/src/client/app/app.component.jade
@@ -1,6 +1,6 @@
 div#app-component
-  header
-    top-menu([title]="applicationTitle" *ngIf="!isLoggedIn")
+  header(*ngIf="!isLoggedIn")
+    top-menu([title]="applicationTitle" )
   aom-sidebar-toggle(*ngIf="isLoggedIn")
   aom-sidebar
   view-wrapper
