make font miriam libre

--- a/src/client/core/top-menu/top-menu.component.styl
+++ b/src/client/core/top-menu/top-menu.component.styl
@@ -1,4 +1,4 @@
-$navFontFamily = Monaco, Roboto, sans-serif
+$navFontFamily = 'Miriam Libre', 'Roboto Slab', sans-serif
 $brand-nav-bg = #fff;
 MaxSize = 64px
 
