--- a/src/client/global-styles/variables.styl
+++ b/src/client/global-styles/variables.styl
@@ -1,5 +1,6 @@
 // Fonts
-$brand-header-font = Miriam Libre, Roboto Slab, sans-serif
+$brand-font = 'Miriam Libre', 'Roboto Slab', sans-serif;
+$brand-header-font = 'Miriam Libre', 'Roboto Slab', sans-serif
 
 // Colors
 $brand-green = #6ACABC
