--- a/src/client/home/home.styl
+++ b/src/client/home/home.styl
@@ -5,6 +5,9 @@
 home-section-one-bg = #e57373
 home-section-two-bg = $brand-green
 
+div, p, a
+  font-family: $brand-font
+  
 // General Spacing classes
 .padded
   padding: 20px
