--- a/src/client/main.styl
+++ b/src/client/main.styl
@@ -1,7 +1,13 @@
+@import './global-styles/variables.styl'
+
 body
   display flex
   min-height 100vh
   flex-direction column
+  font-family: $brand-font !important
 
 main
   flex 1 0 auto
+
+p
+  font-family: $brand-font
