--- a/src/index.jade
+++ b/src/index.jade
@@ -12,6 +12,8 @@ html(lang="en")
     meta(name="apple-mobile-web-app-status-bar-style" content="black")
     meta(property="og:locale", content="en_US")
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Miriam+Libre" rel="stylesheet")
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css")
     title Art Of Metrics
     style(type='text/css').
