--- a/src/client/home/home-carousel.component.styl
+++ b/src/client/home/home-carousel.component.styl
@@ -1,8 +1,10 @@
+@require('../global-styles/variables.styl')
 
-// .aom-item-container
-//   height: 400px
-//   width 400px
+#home-carousel
+  font-family: $brand-font
+  height: auto
+
 .home-carousel-img
-  height 225px
+  height 150px
   max-height: 225px
   width auto
