--- a/src/client/app/app.component.jade
+++ b/src/client/app/app.component.jade
@@ -1,8 +1,13 @@
 div#app-component
   header(*ngIf="!isLoggedIn")
     top-menu([title]="applicationTitle" )
-  aom-sidebar-toggle(*ngIf="isLoggedIn")
+  div.container
+    div.row
+      div.col.s1
+        aom-sidebar-toggle(*ngIf="isLoggedIn")
+      div.col.s12
+        view-wrapper
+          router-outlet
   aom-sidebar
-  view-wrapper
-    router-outlet
+  
   aom-footer
