--- a/src/client/global-styles/buttons.styl
+++ b/src/client/global-styles/buttons.styl
@@ -1,3 +1,11 @@
+@import './variables';
+
 .aom-btn-flat
   border-radius: 0px
   font-family: $brand-header-font
+
+aom-btn-green()
+  background-color: $brand-green
+
+aom-btn-peach()
+  background-color: $brand-peach
