--- a/src/client/sidebar/sidebar.component.jade
+++ b/src/client/sidebar/sidebar.component.jade
@@ -1,11 +1,11 @@
 ul.side-nav#aom-sidebar
   
   div
-    a([routerLink]="['/']")
+    a.btn.btn-waves([routerLink]="['/']")
       i.material-icons.medium home
 
   div.center-align.sidebar-user-info
-    a([routerLink]="['profile']")
+    a.sidebar-button.btn.btn-waves([routerLink]="['profile']")
       i.material-icons.medium person_pin
   li.center-align
     p(*ngIf="userService.$") {{ userService.$.fullName() }}
