feat: initials component

--- a/src/client/sidebar/sidebar.component.jade
+++ b/src/client/sidebar/sidebar.component.jade
@@ -3,10 +3,9 @@ ul.side-nav#aom-sidebar
   div
     a.btn.btn-waves([routerLink]="['/']")
       i.material-icons.medium home
-
   div.center-align.sidebar-user-info
     a.sidebar-button.btn.btn-waves([routerLink]="['profile']")
-      i.material-icons.medium person_pin
+      user-initials([user]="userService.$" *ngIf="userService.isLoggedIn()")
   li.center-align
     p(*ngIf="userService.$") {{ userService.$.fullName() }}
   li.center-align
