--- a/src/client/courses/student/take-course/take-module/active-module.component.styl
+++ b/src/client/courses/student/take-course/take-module/active-module.component.styl
@@ -1,5 +1,8 @@
 @import '../../../../global-styles/variables.styl'
 
+#active-module
+  font-family: $brand-font
+  
 .drip-row
   font-family: $brand-header-font
   background-color: $brand-light-background-header
